<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="accountSpinnerLabel">Account</string>
    <string name="addContactButtonLabel">Add Contact</string>
    <string name="addContactTitle">Add Contact</string>
    <string name="allAccounts">All Accounts</string>
    <string name="app_name">Fill Contact</string>
    <string name="contactCreationFailure">Contact creation failed, check logs.</string>
    <string name="contactEmailLabel">Contact Email</string>
    <string name="contactNameLabel">Contact Name</string>
    <string name="contactPhoneLabel">Contact Phone</string>
    <string name="save">Save</string>
    <string name="selectAccountLabel">Select</string>
    <string name="selectLabel">Select label</string>
    <string name="showInvisible">Show Invisible Contacts (Only)</string>
    <string name="targetAccountLabel">Target Account</string>
    <string name="undefinedTypeLabel">(Undefined)</string>
    
    <string name="addEmail">Add Email</string>
    <string name="contactAmount">Contact Amount</string>
    <string name="contactNameDigit">Contact Name Digit</string>
    <string name="contactPhoneDigit">Contact Phone Digit</string>
    <string name="generate">Generate</string>    
    <string name="removeAll">Remove All</string>    
    <string name="contactDigitFailure">Contact name or phone digit is invalid, check logs.</string>    
    <string name="generateProgressDialogTitle">Loading...</string>    
    <string name="removeProgressDialogTitle">Removing...</string>    
    <string name="alertDialogTitle">Are you sure you want to remove them all?</string>    
</resources>
