<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <TableLayout android:layout_width="match_parent"
                 android:layout_height="match_parent">
         <!-- Account -->        
        <TableRow>
           <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/targetAccountLabel"/>
        </TableRow>
        <TableRow>
            <Spinner android:layout_height="wrap_content"
                     android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:id="@+id/accountSpinner"/>
        </TableRow>
        
        <!-- Contact Amount -->
        <TableRow
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/contactAmount"
                      android:layout_weight="1"
                      />
            <EditText android:id="@+id/contactAmountEditText"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:inputType="numberDecimal" 
                      android:layout_weight="3"
                      android:hint="1"/>
        </TableRow>
        
        <!-- Name Digit -->
        <TableRow
            android:orientation="horizontal">
            <TextView android:text="@string/contactNameDigit"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"/>
            <EditText android:id="@+id/contactNameDigitEditText"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:inputType="numberDecimal" 
                      android:layout_weight="3"
                      android:hint="3"/>
        </TableRow>
        
        <!-- Phone Digit -->
        <TableRow
            android:orientation="horizontal">
            <TextView android:text="@string/contactPhoneDigit"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"/>
            <EditText android:id="@+id/contactPhoneDigitEditText"
                      android:layout_height="wrap_content"
                      android:layout_width="wrap_content"
                      android:inputType="numberDecimal" 
                      android:layout_weight="3"
                      android:hint="8"/>
        </TableRow>
        
        <!-- Add Email -->
        <TableRow
            android:paddingTop="20sp">
            <CheckBox android:text="@string/addEmail"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/addEmail" />
        </TableRow>
        <TableRow
            android:paddingTop="20sp">
           <Button android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/generate"
                    android:id="@+id/contactGenerateButton"
                    android:layout_width="match_parent"
                    android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:paddingTop="20sp">
            <Button android:layout_height="wrap_content"
                	android:layout_gravity="center_horizontal"
                    android:text="@string/removeAll"
                    android:id="@+id/contactRemoveAllButton"
                    android:layout_width="match_parent"
                    android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</ScrollView>
